// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#2436 - block with a same name extends from different layout in nesting 1`] = `
"
<h1>layout </h1>
<p>Main A</p>
<h1>other layout</h1>
<p>Other A</p>"
`;

exports[`#2436 - block with a same name extends from the same layout in nesting 1`] = `
"
<h1>layout </h1>
<p>Main A</p>
<h1>layout </h1>
<p>Other A</p>"
`;
